--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,7 @@ dependencies:
 
   intl: any
   shared_preferences: ^2.5.3
+  provider: ^6.1.5
 dev_dependencies:
   flutter_test:
     sdk: flutter
