--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,8 @@ dependencies:
   intl: any
   shared_preferences: ^2.5.3
   provider: ^6.1.5
+  csv: ^6.0.0
+  file_saver: ^0.3.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
