--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,8 @@ dependencies:
   provider: ^6.1.5
   csv: ^6.0.0
   file_saver: ^0.3.1
+  path_provider: ^2.1.3
+  open_file: ^3.3.2
 dev_dependencies:
   flutter_test:
     sdk: flutter
