--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,7 @@ dependencies:
   file_saver: ^0.3.1
   path_provider: ^2.1.3
   open_file: ^3.3.2
+  excel: ^4.0.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
